tests/fixtures/invalid/missing_return.torel
unit fixtures.missing_return;

export proc main() -> Exit {
}
